@@ -28,6 +28,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
+                <configuration>
+                    <useModulePath>false</useModulePath>
+                    <argLine>@{argLine}
+                        --add-opens java.base/java.net=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
 
             <plugin>
